Adding azure db with migrations

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "azure": "Server=tcp:air-bnb-alex.database.windows.net,1433;Initial Catalog=Air_BNB;Persist Security Info=False;User ID=airbnbamdin;Password=@airbnb_@dmin12;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "DefaultConnection": "Server=.;Database=beta;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
